@@ -1,4 +1,9 @@
-Fri Jul 22 21:53:24 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+Sat Jul 23 14:38:28 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* test/rake*: Remove dependencies on flexmock and session gems.
+	  [Ruby 1.9 - Bug #4987]
+
+Fri Jul 22 21:46:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* vm_insnhelper.c (vm_call_cfunc): added volatile for a workaround
 	  of cfp consistency error problem on OS X 10.7 (Lion). It's
